--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -9,8 +9,11 @@
   max-width: 318px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 620px) {
   .footer__text {
     max-width: 282px;
+    font-size: 14px;
+    line-height: 17px;
+    padding: 48px 0 36px 0;
   }
 }
