--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -55,7 +55,7 @@
   grid-area: button;
   margin-left: 18px;
   padding: 0;
-  border: solid white 2px;
+  border: solid white 1px;
 }
 
 .profile__edit-button:hover {
@@ -82,6 +82,7 @@
     flex-direction: column;
     padding: 0;
     min-height: 286px;
+    padding-top: 42px;
   }
 
   .profile__info {
@@ -97,6 +98,8 @@
 
   .profile__edit-button {
     margin-top: 17px;
+    width: 18px;
+    height: 18px;
   }
 
   .profile__description {
@@ -116,6 +119,7 @@
 @media screen and (min-width: 621px) and (max-width: 770px) {
   .profile__title {
     font-size: 36px;
+    max-width: 320px;
   }
 
   .profile__info {
